--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
   <title>Contact</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resources/css/style.css">
   <!-- font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 
           <div class="col-4">
             <a class="navbar-brand" href="index.html">
-                <img src="Luca Pavone Logo vector.png" class="img-fluid" id="logonav" alt="Logo">
+                <img src="resources/images/Luca%20Pavone%20Logo%20vector.png" class="img-fluid" id="logonav" alt="Logo">
             </a>
           </div>
 
@@ -65,7 +65,7 @@
     <!-- Message input -->
     <div class="mb-3">
       <label class="form-label" for="message">Message</label>
-      <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+      <textarea class="form-control" id="message" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
     </div>
 
     <!-- Form submit button -->
@@ -79,7 +79,7 @@
   </main>
 
 
-    <script src="jav.js"></script>
+    <script src="resources/js/jav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
