--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Luca Pavone</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="resources/css/style.css">
         <!-- font link -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <body class="container-fluid ">
 
         <div class="vid">
-            <video src="op.mov" autoplay loop muted></video>
+            <video src="resources/video/op.mov" autoplay loop muted></video>
 
             <div id="tutto">
                 
@@ -26,7 +26,7 @@
                             <div class="row mt-2" id="arrow">
                                 <div class="col text-center">&darr;</div>
                             </div>
-                            <img src="Luca Pavone Logo vector.png" class="img-fluid" alt="Logo">
+                            <img src="resources/images/Luca%20Pavone%20Logo%20vector.png" class="img-fluid" alt="Logo">
                             <hr>
                         </a>
                     </div>
