--- a/Social.html
+++ b/Social.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-<!--suppress XmlHighlighting, XmlHighlighting -->
-Highlighting -->
-Highlighting -->
-Highlighting -->
-Highlighting -->
-Highlighting -->
-Highlighting -->
+<!--suppress XmlHighlighting -->
 <html lang="en">
 
 <head>
