--- a/Sounds.html
+++ b/Sounds.html
@@ -89,13 +89,16 @@
 
             <div class="container-fluid text-center justify-content-center">
                 <div class="row">
-                    <p class="par"><b>OTHER PLATFORMS:</b></p>
+                    <div class="col">
+
+                        <p class="par"><b>OTHER PLATFORMS:</b></p>
+                    </div>
                 </div>
                 <div id="TD" class="row">
                     <div class="col">
                         <iframe src="https://fanlink.to/Luca_Pavone?embed=true" allowfullscreen
-                                style="border-radius:3px"
-                                frameborder="0" height="900" width="480"></iframe>
+                                style="border-radius:3px; width: 100%;"
+                                frameborder="0" height="900"></iframe>
                     </div>
                 </div>
             </div>
@@ -108,7 +111,7 @@
     </p>
 </footer>
 
-<script src="resources/js/jav.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
