--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Luca Pavone</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link rel="stylesheet" href="resources/css/style.css">
+        <link rel="stylesheet" href="resources/css/index.css">
         <!-- font link -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,9 +37,9 @@
                     <div>
                         <nav id="navi">
                             <!-- <button>Home</button> -->
-                            <button><a href="Sounds.html">Sounds</a></button>
-                            <button><a href="Social.html">Social</a></button>
-                            <button><a href="mailto:l.pavone.contact@gmail.com">Contact</a></button>
+                            <a href="Sounds.html">Sounds</a>
+                            <a href="Social.html">Social</a>
+                            <a href="mailto:l.pavone.contact@gmail.com">Contact</a>
                         </nav>
                     </div>
                 </header>
