--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body class="container-fluid ">
 
         <div class="vid">
-            <video src="resources/video/op.mov" autoplay loop muted></video>
+            <video src="resources/video/op.mov" autoplay loop muted placeinline></video>
 
             <div id="tutto">
                 
