--- a/Social.html
+++ b/Social.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--suppress XmlHighlighting -->
 <html lang="en">
 
 <head>
@@ -8,7 +7,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QTXCV3B6RQ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() {dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'G-QTXCV3B6RQ');
@@ -20,6 +19,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
+
+    <meta name="description" content="Luca Pavone's landing page." />
+    <meta property="og:title" content="LPMusic" />
+    <meta property="og:url" content="https://www.lpavonemusic.com/index.html" />
+    <meta property="og:description" content="Luca Pavone's landing page." />
+    <meta property="og:image" content="//favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    
+
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
