--- a/Sounds.html
+++ b/Sounds.html
@@ -20,6 +20,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
+
+    <meta name="description" content="Luca Pavone's landing page." />
+    <meta property="og:title" content="LPMusic" />
+    <meta property="og:url" content="https://www.lpavonemusic.com/index.html" />
+    <meta property="og:description" content="Luca Pavone's landing page." />
+    <meta property="og:image" content="//favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
