--- a/Social.html
+++ b/Social.html
@@ -25,7 +25,15 @@
     <meta property="og:url" content="https://www.lpavonemusic.com/index.html" />
     <meta property="og:description" content="Luca Pavone's landing page." />
     <meta property="og:image" content="//favicon.png" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
+    <!--    Favicon section -->
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="resources/images/favicons/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!-------->
     
 
     <!-- font link -->
