Change favicon Fix navbar restyle directory layout fix file names fix domain redirect https TODO fix footer
Reviewed-by: Luca Pavone <100778859+ziolou@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,15 +3,6 @@
 
 <head>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QTXCV3B6RQ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-QTXCV3B6RQ');
-    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,10 +19,11 @@
     <meta property="og:image" content="//favicon.png" />
 
     <!--    Favicon section -->
-    <link rel="apple-touch-icon" sizes="180x180" href="resources/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="resources/images/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/LPLogo.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/favicons/LPLogo.ico">
+    <link rel="icon" type="image/png" sizes="64x64" href="resources/favicons/LPLogo.ico">
+    <link rel="manifest" href="resources/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-------->
@@ -67,16 +59,18 @@
                 <div>
                     <nav id="navi">
                         <!-- <button>Home</button> -->
-                        <a href="Sounds.html">Sounds</a>
-                        <a href="Social.html">Social</a>
-                        <a href="mailto:l.pavone.contact@gmail.com">Contact</a>
+                        <a href="play.html">Play &#x23f5;</a>
+                        <a href="social.html">Social</a>
+                        <a href="mailto:l.pavone.contact@gmail.com">Booking</a>
                     </nav>
                 </div>
             </header>
-            <footer>
-                <p>
-                    Designed and built by Luca Pavone @2022
-                </p>
+            <footer class="row align-items-center justify-content-center">
+                <div class="col-6">
+                    <p>
+                        Designed and built by Luca Pavone @2022
+                    </p>
+                </div>
             </footer>
         </div>
 
