--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Luca Pavone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/index.css">
 
     <meta name="description" content="Luca Pavone's landing page." />
     <meta property="og:title" content="LPMusic" />
-    <meta property="og:url" content="https://www.lpavonemusic.com/index.html" />
+    <meta property="og:url" content="https://www.lpavonemusic.com/" />
     <meta property="og:description" content="Luca Pavone's landing page." />
     <meta property="og:image" content="//favicon.png" />
 
@@ -37,47 +37,47 @@
 
 <body class="container-fluid ">
 
-    <div class="vid">
-        <video src="resources/video/op.mov" autoplay loop muted playsinline></video>
+<div class="vid">
+    <video src="resources/video/op.mov" autoplay loop muted playsinline></video>
 
-        <div id="tutto">
+    <div id="tutto">
 
 
-            <div class="row align-items-center justify-content-center m-2">
-                <div id="logoz" class="col-9">
-                    <a href="https://fanlink.to/Luca_Pavone_">
-                        <div class="row mt-2" id="arrow">
-                            <div class="col text-center">&darr;</div>
-                        </div>
-                        <img src="resources/images/Luca%20Pavone%20Logo%20vector.png" class="img-fluid" alt="Logo">
-                        <hr>
-                    </a>
-                </div>
+        <div class="row align-items-center justify-content-center m-2">
+            <div id="logoz" class="col-9">
+                <a href="https://fanlink.to/Luca_Pavone_">
+                    <div class="row mt-2" id="arrow">
+                        <div class="col text-center">&darr;</div>
+                    </div>
+                    <img src="resources/images/Luca%20Pavone%20Logo%20vector.png" class="img-fluid" alt="Logo">
+                    <hr>
+                </a>
             </div>
-            <header class="row align-items-center justify-content-center">
-                <p class="container text-center ">Welcome.</p>
-                <div>
-                    <nav id="navi">
-                        <!-- <button>Home</button> -->
-                        <a href="play.html">Play &#x23f5;</a>
-                        <a href="social.html">Social</a>
-                        <a href="mailto:l.pavone.contact@gmail.com">Booking</a>
-                    </nav>
-                </div>
-            </header>
-            <footer class="row align-items-center justify-content-center">
-                <div class="col-6">
-                    <p>
-                        Designed and built by Luca Pavone @2022
-                    </p>
-                </div>
-            </footer>
         </div>
-
-
+        <header class="row align-items-center justify-content-center">
+            <p class="container text-center ">Welcome.</p>
+            <div>
+                <nav id="navi">
+                    <!-- <button>Home</button> -->
+                    <a href="social">Social</a>
+                    <a href="play">Play&nbsp&#x23f5;</a>
+                    <a href="mailto:l.pavone.contact@gmail.com">Booking</a>
+                </nav>
+            </div>
+        </header>
+        <footer class="row align-items-center justify-content-center">
+            <div class="col-6">
+                <p>
+                    Designed and built by Luca&nbspPavone
+                </p>
+            </div>
+        </footer>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 
