--- a/social.html
+++ b/social.html
@@ -27,7 +27,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-------->
-    
+
 
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,16 +44,16 @@
         <div class="container-fluid text-center">
             <div class="row justify-content-center">
                 <div class="col-3">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="./">
                         <img src="resources/images/Luca%20Pavone%20Logo%20vector.png" class="img-fluid" id="logonav"
                              alt="Logo">
                     </a>
                 </div>
                 <div class="col-3 p-1">
-                    <a href="social.html">SOCIAL</a>
+                    <a href="social">SOCIAL</a>
                 </div>
                 <div class="col-3 p-1">
-                    <a href="play.html">PLAY &#x23f5;</a>
+                    <a href="play">PLAY &#x23f5;</a>
                 </div>
                 <div class="col-3 p-1">
                     <a href="mailto:l.pavone.contact@gmail.com">BOOKING</a>
@@ -474,7 +474,7 @@
 </div>
 <footer>
     <p>
-        Designed and built by Luca Pavone @2022
+        Designed and built by Luca Pavone
     </p>
 </footer>
 
