--- a/social.html
+++ b/social.html
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-4 p-1">
-                    <a href="social">SOCIAL</a>
+                    <a href="play">PLAY &#x23f5;</a>
                 </div>
                 <div class="col-4 p-1">
                     <a href="mailto:l.pavone.contact@gmail.com">BOOKING</a>
