--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Luca Pavone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/index.css">
 
@@ -35,14 +36,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 </head>
 
-<body class="container-fluid ">
-
+<body>
 <div class="vid">
     <video src="resources/video/op.mov" autoplay loop muted playsinline></video>
-
     <div id="tutto">
-
-
         <div class="row align-items-center justify-content-center m-2">
             <div id="logoz" class="col-9">
                 <a href="https://fanlink.to/Luca_Pavone_">
@@ -58,19 +55,16 @@
             <p class="container text-center ">Welcome.</p>
             <div>
                 <nav id="navi">
-                    <!-- <button>Home</button> -->
                     <a href="social">Social</a>
                     <a href="play">Play&nbsp&#x23f5;</a>
                     <a href="mailto:l.pavone.contact@gmail.com">Booking</a>
                 </nav>
             </div>
         </header>
-        <footer class="row align-items-center justify-content-center">
-            <div class="col-6">
+        <footer>
                 <p>
                     Designed and built by Luca&nbspPavone
                 </p>
-            </div>
         </footer>
     </div>
 
