--- a/play.html
+++ b/play.html
@@ -5,33 +5,33 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Sounds</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="resources/css/style.css">
-    <link rel="stylesheet" href="resources/css/navbar.css">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" rel="stylesheet">
+    <link href="resources/css/style.css" rel="stylesheet">
+    <link href="resources/css/navbar.css" rel="stylesheet">
 
-    <meta name="description" content="Luca Pavone's landing page." />
-    <meta property="og:title" content="LPMusic" />
-    <meta property="og:url" content="https://www.lpavonemusic.com/index.html" />
-    <meta property="og:description" content="Luca Pavone's landing page." />
-    <meta property="og:image" content="//favicon.png" />
+    <meta content="Luca Pavone's landing page." name="description"/>
+    <meta content="LPMusic" property="og:title"/>
+    <meta content="https://www.lpavonemusic.com/index.html" property="og:url"/>
+    <meta content="Luca Pavone's landing page." property="og:description"/>
+    <meta content="//favicon.png" property="og:image"/>
 
     <!--    Favicon section -->
-    <link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/LPLogo.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/favicons/LPLogo.ico">
-    <link rel="icon" type="image/png" sizes="64x64" href="resources/favicons/LPLogo.ico">
-    <link rel="manifest" href="resources/favicons/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <link href="resources/favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="resources/favicons/LPLogo.ico" rel="icon" sizes="32x32" type="image/png">
+    <link href="resources/favicons/LPLogo.ico" rel="icon" sizes="16x16" type="image/png">
+    <link href="resources/favicons/LPLogo.ico" rel="icon" sizes="64x64" type="image/png">
+    <link href="resources/favicons/site.webmanifest" rel="manifest">
+    <meta content="#da532c" name="msapplication-TileColor">
+    <meta content="#ffffff" name="theme-color">
     <!-------->
 
     <!-- font link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 </head>
 
@@ -44,8 +44,8 @@
             <div class="row justify-content-center">
                 <div class="col-4">
                     <a class="navbar-brand" href="./">
-                        <img src="resources/images/Luca%20Pavone%20Logo%20vector.png" class="img-fluid" id="logonav"
-                             alt="Logo">
+                        <img alt="Logo" class="img-fluid" id="logonav"
+                             src="resources/images/Luca%20Pavone%20Logo%20vector.png">
                     </a>
                 </div>
                 <div class="col-4 p-1">
@@ -63,14 +63,15 @@
 <div class="container-fluid text-center justify-content-center">
     <div class="row">
         <p class="par"><b>LISTEN ON SPOTIFY:</b></p>
+    </div>u
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
+            <iframe style="border-radius:12px; box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.638);" src="https://open.spotify.com/embed/playlist/3WPPfjwlgbMOsMiNwrYk3U?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+        </div>
     </div>
 
-    <div id="SP" class="row">
-        <iframe src="https://open.spotify.com/embed/playlist/3WPPfjwlgbMOsMiNwrYk3U?utm_source=generator&theme=0"
-                frameBorder="0" allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
-    </div>
 </div>
 
 <!-- Video incorporato -->
@@ -78,7 +79,7 @@
     <div class="row">
         <p class="par"><b>LISTEN ON YOUTUBE:</b></p>
     </div>
-    <div id="YT" class="row">
+    <div class="row" id="YT">
         <div class="col-sm-1 col-md-2 col-lg-3">
         </div>
         <div class="col-sm-10 col-md-8 col-lg-6 ">
@@ -86,11 +87,11 @@
                 <!-- <iframe class="" src="https://www.youtube.com/embed/dHtwMpIEKm4?start=5349" title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe> -->
-                <iframe width="560" height="315"
-                        src="https://www.youtube.com/embed/videoseries?list=OLAK5uy_nPFuN7xK5K7njjZ3Im6cRLYp164RGE57o"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                        frameborder="0"
+                        height="315" src="https://www.youtube.com/embed/videoseries?list=OLAK5uy_nPFuN7xK5K7njjZ3Im6cRLYp164RGE57o"
+                        title="YouTube video player"
+                        width="560"></iframe>
             </div>
 
             <div class="container-fluid text-center justify-content-center">
@@ -100,9 +101,9 @@
             </div>
             <div class="col" id="ch">
                 <script src="https://apis.google.com/js/platform.js"></script>
-                <div class="g-ytsubscribe" data-channelid="UC5ImZuUfQXdP2jiOsG9u1gw" data-layout="full"
-                     data-theme="default"
-                     data-count="default">
+                <div class="g-ytsubscribe" data-channelid="UC5ImZuUfQXdP2jiOsG9u1gw" data-count="default"
+                     data-layout="full"
+                     data-theme="default">
 
                 </div>
             </div>
@@ -114,11 +115,11 @@
                         <p class="par"><b>OTHER PLATFORMS:</b></p>
                     </div>
                 </div>
-                <div id="TD" class="row">
+                <div class="row" id="TD">
                     <div class="col">
-                        <iframe src="https://fanlink.to/Luca_Pavone?embed=true" allowfullscreen
-                                style="border-radius:3px; width: 100%;"
-                                frameborder="0" height="900"></iframe>
+                        <iframe allowfullscreen frameborder="0"
+                                height="900"
+                                src="https://fanlink.to/Luca_Pavone?embed=true" style="border-radius:3px; width: 100%;"></iframe>
                     </div>
                 </div>
             </div>
@@ -132,9 +133,9 @@
 </footer>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+<script crossorigin="anonymous"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
